tests/type_param_bounds/type_param_bounds.exp
Error ------------------------------------------------ type_param_bounds.js:4:10

Cannot instantiate `X` because in type argument `T`, string is incompatible with
number.



Found 1 error
